[package]
authors = ["Vigen Gasparyan"]
description = "A platform agnostic driver to interface the ADS1256 (ADC)"
keywords =["embedded-hal-driver", "ads1246", "spi"]
name = "ads1256-rs"
readme = "README.md"
version = "0.1.0"
edition = "2018"

[dependencies.embedded-hal] 
version = "0.2.0"
features = ["unproven"]

[dev-dependencies]
linux-embedded-hal = "0.2"
